syntax = "proto3";
option go_package = "starcoin/sgtypes";
package sgtypes;

message ChannelScriptPackage {
    string package_name = 1;
    repeated ScriptCode scripts =2;
}

message ScriptCode {
    string name = 1;
    string source_code = 2;
    bytes byte_code = 3;
}